--- a/On The Map/Info.plist
+++ b/On The Map/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>On The Map would like to use your location.</string>
 </dict>
 </plist>
